# termibot

./: .gitignore  Cargo.toml  README.md  TermiBot.sln
.github/workflows/: main.yml
TermiBot.Console/: NoobotHost.cs  Program.cs  TermiBot.Console.csproj
TermiBot.Console/Configuration/: TermibotConfiguration.cs
TermiBot.Karma/: TermiBot.Karma.csproj
TermiBot.Karma.Tests/: BaseKarmaContextTests.cs  GenerateCurrentKarmaMessageTests.cs  KarmaRepositoryTests.cs  ReasonRepositoryTests.cs  TermiBot.Karma.Tests.csproj
TermiBot.Karma.Tests/KarmaPlugin/: GenerateCurrentKarmaMessageTests.cs
TermiBot.Karma.Tests/Persistence/: BaseKarmaContextTests.cs  KarmaRepositoryTests.cs  ReasonRepositoryTests.cs
TermiBot.Karma.Tests/Plugins/: GenerateCurrentKarmaMessageTests.cs  GenerateReasonMessageTests.cs  MessageMatchingTests.cs  ParseKarmaChangeTests.cs  ParseKarmaChangeWithReasonTests.cs  ParseKarmaListRequestTests.cs  ParseNameFromReasonRequestTests.cs  ParseNumberFromEndOfRequestTests.cs
TermiBot.Karma/Middleware/: KarmaMiddleware.cs
TermiBot.Karma/Migrations/: 20181111160356_InitialCreate.Designer.cs  20181111160356_InitialCreate.cs  KarmaContextModelSnapshot.cs
TermiBot.Karma/Models/: ChangeRequest.cs  Entry.cs  Reason.cs
TermiBot.Karma/Persistence/: KarmaContext.cs  KarmaRepository.cs  ReasonRepository.cs
TermiBot.Karma/Plugins/: KarmaPlugin.cs  KarmaRepositoryPlugin.cs
bot/: Cargo.toml  termibot.service
bot/src/: lib.rs  main.rs
bot/src/core/: client.rs  mod.rs  on_error.rs  on_interaction.rs  on_push.rs
bot/src/plugins/: mod.rs
bot/src/plugins/emoji_changelog/: mod.rs
bot/src/plugins/songlink/: message_template.rs  mod.rs
client/: Cargo.toml  README.md
client/src/: error.rs  lib.rs  message.rs  models.rs  socket_listener.rs
client/src/models/: AuthTestResponse.rs  WebsocketUrlMessage.rs  auth_test_response.rs  http_response.rs  message_body.rs  message_id.rs  mod.rs  response.rs  socket_message.rs  template.rs  user_message.rs
client/src/models/blocks/: mod.rs  section.rs  text.rs
client/src/models/blocks/elements/: emoji.rs  mod.rs  text.rs  user.rs
client/src/models/blocks/objects/: text.rs
client/tests/: acceptance.rs  test_client_builder.rs  web_sockets.rs
client/tests/resources/: given_blocks_api_used_should_send_blocks_message.vcr.json  given_too_many_requests_should_throttle_to_avoid_rate_limit.vcr.json  should_get_bot_user_details.vcr.json  should_get_identity.vcr.json  should_initiate_socket_mode_connection.vcr.json  should_send_acknowledgement_of_event_messages.vcr.json  should_send_messages_to_channels_and_threads.vcr.json
framework/: Cargo.toml  README.md
framework/config/: template.toml
framework/src/: dependencies.rs  enriched_event.rs  error.rs  event_processor.rs  lib.rs  message.rs  rate_limiter.rs  response.rs  socket_listener.rs
framework/src/actions/: handler.rs  mod.rs
framework/src/command_interface/: mod.rs
framework/src/plugins/: mod.rs  registry.rs
framework/tests/: acceptance.rs  test_client_builder.rs  test_config.rs  web_sockets.rs
framework/tests/resources/: given_too_many_requests_should_throttle_to_avoid_rate_limit.vcr.json  replay.vcr.json  should_initiate_socket_mode_connection.vcr.json  should_send_messages_to_channels_and_threads.vcr.json
karma/: Cargo.toml  karma.db
karma/.sqlx/: query-9a5912d79aff71285f2a721af427bbcb8344d2e2c9855b8e34dad191a03ec0f0.json  query-9a70c71998970dce4c39d98e1631dc8ccecae12040d3d6c09db9e1bdc15cb32a.json  query-a6a637cb2ee3153de424843702924ccdd7cf4111f70931f69dbc1e3e3ea0ee4a.json  query-c551684b943ced783c9bc9f291ad6d26aa09334ae9e5079425ea1ee9f2f0aa40.json  query-ea29df290edfa79f6c72bf597fd7603f90ff004f3e858a4dca763d1890e30f63.json  query-f476ea72460f7f16b9623f4e40df91512923d681742914f3092aeaea8207fd51.json
karma/migrations/: 20230917164539_base.sql
karma/src/: change_request.rs  entry.rs  lib.rs  reason.rs
karma/src/services/: karma_parser.rs  karma_repository.rs  mod.rs
src/: config.rs  lib.rs  main.rs  on_command.rs
src/actions/: mod.rs
src/actions/handlers/: mod.rs  reply_thread.rs
src/core/: client.rs  mod.rs  on_error.rs  on_interaction.rs  on_push.rs
src/extensions/: client.rs
src/modules/: mod.rs  songlink.rs
src/plugins/: mod.rs  songlink.rs
src/plugins/songlink/: message_template.rs  mod.rs
