[package]
name = "termibot"
version = "3.0.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
regex = "1.11.1"
config-file = "0.2.3"
lazy_static = "1.5.0"
async-trait = "0.1.88"
framework = { path = "../framework" }
client = { path = "../client" }
karma = { path = "../karma" }

[dev-dependencies]
chrono = "0.4.41"
futures-locks = "0.7.1"
mockall = "0.12.1"
