[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
reqwest-middleware = "0.1.6"
rvcr = "0.1.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.68"
task-local-extensions = "0.1.4"
governor = "0.5.1"
nonzero = "0.1.0"
tokio-tungstenite = { version = "0.19.0", features = ["native-tls"] }
url = "2.4.0"
futures-util = { version = "0.3.28", features = ["sink", "std"] }
serde_with = "3.0.0"
slack-morphism = "1.8.0"

[dev-dependencies]
config-file = "0.2.3"
futures-channel = "0.3.28"
glob = "0.3.1"
lazy_static = "1.4.0"
regex = "1.8.4"
