[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
reqwest-middleware = "0.1.6"
rvcr = "0.1.5"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.77"
task-local-extensions = "0.1.4"
governor = "0.6.0"
nonzero = "0.2.0"
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
url = "2.5.0"
futures-util = { version = "0.3.30", features = ["sink", "std"] }
serde_with = "3.4.0"
tracing = "0.1.40"
secrecy = "0.8.0"
mockall = "0.12.1"
rvstruct = "0.3.2"
builder-pattern = "0.4.2"
async-timer = "0.7.4"

[dev-dependencies]
serial_test = "2.0.0"
config-file = "0.2.3"
futures-channel = "0.3.30"
glob = "0.3.1"
lazy_static = "1.4.0"
regex = "1.10.2"
