[package]
name = "framework"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
client = { path = "../client" }
futures = "0.3.28"
mockall = "0.11.4"
reqwest = "0.11.18"
serde = "1.0.164"
serde_json = "1.0.96"
tokio = "1.28.2"
tokio-test = "0.4.2"
tracing = "0.1.37"

[dev-dependencies]
futures-channel = "0.3.28"
