[package]
name = "framework"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
client = { path = "../client" }
futures = "0.3.30"
mockall = "0.11.4"
reqwest = "0.11.23"
serde = "1.0.195"
serde_json = "1.0.111"
tokio = "1.35.1"
tracing = "0.1.40"

[dev-dependencies]
tokio-test = "0.4.3"
futures-channel = "0.3.30"
