[package]
name = "framework"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.88"
client = { path = "../client" }
futures = "0.3.31"
mockall = "0.12.1"
regex = "1.11.1"
reqwest = "0.11.27"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = "1.45.1"
tracing = "0.1.41"

[dev-dependencies]
tokio-test = "0.4.4"
futures-channel = "0.3.31"
