[package]
name = "karma"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.37"
tokio = { version = "1.25.0", features = ["full"] }
regex = "1.7.2"
lazy_static = "1.4.0"
sqlx = { version = "0.7.1", features = ["runtime-tokio-native-tls", "sqlite"]}
framework = { path = "../framework" }
client = { path = "../client" }
async-trait = "0.1.68"
serial_test = "2.0.0"

[dev-dependencies]
tracing-test = "0.2.4"
