[package]
name = "karma"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.41"
tokio = { version = "1.45.1", features = ["full"] }
regex = "1.11.1"
lazy_static = "1.5.0"
sqlx = { version = "0.7.4", features = ["runtime-tokio-native-tls", "sqlite"]}
framework = { path = "../framework" }
client = { path = "../client" }
async-trait = "0.1.88"
mockall = "0.12.1"

[dev-dependencies]
serial_test = "2.0.0"
tracing-test = "0.2.5"
